# cloud_tiny_whiny_little_pj

./: app.py  main.py  model.py  pdf_reader.py  pyproject.toml  vietnamese_dict.txt
instance/: app.db
static/: style.css
templates/: index.html  login.html  register.html
